--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,7 @@
   text-align: center;
 }
 
+
 .ScoreBoard {
   display: flex;
   justify-content: center;
@@ -20,9 +21,10 @@
 }
 .menu-item {
   cursor: pointer;
-  padding: 5px;
+  padding: 10px 5px;
   height: 28px;
   border-bottom: 1px solid rgb(187, 187, 187);
+  font-size: 2.5em;
 }
 .menu-item:hover {
   color: #2980b9;
